--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button><img src="images/search.png" alt="search icon"></button>
         </div>
         <div class="error">
-            <p>Invalid city name</p>
+            <p>Sorry! We couldn't find that location</p>
         </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon" alt="">
@@ -40,61 +40,7 @@
             </div>
         </div>
     </div>
-    <script>
-        const apiKey = "747619457e4b7e436beaeba4ff608b37"
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
-        
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon");
-
-        async function checkWeather(city) {
-            const response = await fetch(apiUrl + city +`&appid=${apiKey}`);
-            if(response.status == 400 || response.status == 404) {
-                document.querySelector(".error").style.display = "block";
-                document.querySelector(".weather").style.display = "none";
-                return
-            }
-
-            let data = await response.json();
-            //TODO: Delete this 
-            console.log(data);
-
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "&deg;c";
-            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
-
-            switch(data.weather[0].main){
-                case "Clouds":
-                    weatherIcon.src = "images/clouds.png";
-                    break;
-                case "Clear":
-                    weatherIcon.src = "images/clear.png";
-                    break;
-                case "Rain":
-                    weatherIcon.src = "images/rain.png";
-                    break;
-                case "Drizzle":
-                    weatherIcon.src = "images/drizzle.png";
-                    break;
-                case "Mist":
-                    weatherIcon.src = "images/mist.png";
-                    break;
-                default:
-                    weatherIcon.src = "images/clear.png"
-            }
-
-            document.querySelector(".error").style.display = "none";
-            document.querySelector(".weather").style.display = "block";
-        }
-
-        searchBtn.addEventListener("click", () => {
-            checkWeather(searchBox.value);
-        })
-
-        checkWeather("Accra");
-
-    </script>
+    <script type="module" src="environment.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
